# PYWEB-HW09

./: README.md  authors.json  config.ini  main.py  main_scrapy.py  models.py  pyproject.toml  quotes.json  seeds.py
